# nrf52840-m2

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: leds.rs
nrf52840-m2/: Cargo.toml
nrf52840-m2-dk/: Cargo.toml  README.md
nrf52840-m2-dk/examples/: lcd.rs
nrf52840-m2-dk/src/: lib.rs
nrf52840-m2/.cargo/: config.toml
nrf52840-m2/src/: led.rs  lib.rs  logger.rs
src/: led.rs  lib.rs  logger.rs  main.rs
