[package]
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52840-m2"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
nrf52840-hal = "0.14.0"
log = "0.4.14"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
